--- a/assets/styles/layouts/_button.scss
+++ b/assets/styles/layouts/_button.scss
@@ -13,7 +13,7 @@
   left: 50%;
   margin: -25vh 0 0 -25vh;
   border-radius: 50%;
-  box-shadow: inset 0 -5px 20px rgba(0,0,0,0.5), inset 0 15px 20px rgba(255,255,255,0.5), 0 5px 10px rgba(0,0,0,0.75), 0 10px 10px rgba(0,0,0,0.5);
+  box-shadow: inset 0 -5px 10px rgba(0,0,0,0.5), inset 0 15px 10px rgba(255,255,255,0.5), 0 5px 10px rgba(0,0,0,0.75), 0 10px 10px rgba(0,0,0,0.5);
   box-sizing: border-box;
   padding: 78px 9px 0 0;
   cursor: pointer;
@@ -34,10 +34,11 @@
     top: -3vh;
     left: -3vh;
     box-shadow: inset 0 7px 15px rgba(255,255,255,0.5), inset 0 -7px 15px rgba(0,0,0,0.5);
+    border:2px solid #444;
   }
 
   &:active {
-    box-shadow: inset 0 0 20px rgba(0,0,0,0.5);
+    box-shadow: inset 0 0 10px rgba(0,0,0,0.5), 0 5px 10px rgba(0,0,0,0.35), 0 10px 10px rgba(0,0,0,0.35);
     color: #ffeded;
   }
 
