--- a/assets/styles/layouts/_button.scss
+++ b/assets/styles/layouts/_button.scss
@@ -7,11 +7,11 @@
   color: #ffe5e5;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.5);
   background: #e5e5e5;
-  width: 50vh;
-  height: 50vh;
+  width: 60vw;
+  height: 60vw;
   top: 58%;
   left: 50%;
-  margin: -25vh 0 0 -25vh;
+  margin: -30vw 0 0 -30vw;
   border-radius: 50%;
   box-shadow: inset 0 -5px 10px rgba(0,0,0,0.5), inset 0 15px 10px rgba(255,255,255,0.5), 0 5px 10px rgba(0,0,0,0.75), 0 10px 10px rgba(0,0,0,0.5);
   box-sizing: border-box;
@@ -19,22 +19,35 @@
   cursor: pointer;
   transition: all 0.1s ease;
 
+  @media (min-width: 800px) {
+    width: 50vh;
+    height: 50vh;
+    margin: -25vh 0 0 -25vh;
+  }
+
   &:before {
-    content: " ";
+    content: "";
     display: block;
     position: absolute;
     z-index: -5;
-    width: 56vh;
-    height: 56vh;
+    width: 66vw;
+    height: 66vw;
     top: 58%;
     left: 50%;
-    -webkit-border-radius: 50%;
     border-radius: 50%;
     background: #e5e5e5;
-    top: -3vh;
-    left: -3vh;
+    top: -3vw;
+    left: -3vw;
     box-shadow: inset 0 7px 15px rgba(255,255,255,0.5), inset 0 -7px 15px rgba(0,0,0,0.5);
     border:2px solid #444;
+
+    @media (min-width: 800px) {
+      width: 56vh;
+      height: 56vh;
+      top: -3vh;
+      left: -3vh;
+    }
+    
   }
 
   &:active {
