--- a/assets/styles/layouts/_logo.scss
+++ b/assets/styles/layouts/_logo.scss
@@ -1,9 +1,16 @@
 #logo,
 .logo {
   position: absolute;
-  top:14vh;
+  top:50%;
   left:50%;
-  transform:translateX(-50%);
-  width:65vh;
+  transform:translate(-50%,-50%);
+  width:65vw;
   height:auto;
+  margin-top:-30vw;
+
+  @media (min-width: 800px) {
+    width:65vh;
+    top:14vh;
+    transform:translateX(-50%);
+  }
 }
